WIP-3: It builds, but does it work?